# p2p-chat-http

./: AGENTS.md  Cargo.toml  flake.nix  package.json
migrations/: 001_create_peers.sql
src/: main.rs  peer-id.ts  server.ts
