[package]
name = "p2p-chat-http"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
libp2p-identity = { version = "0.2", features = ["ed25519", "secp256k1", "rsa", "peerid"] }
tower-http = { version = "0.6", features = ["limit"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http = "1"
rand = "0.8"
